--- a/AnotherDuplicatelol/src/namesayer/playlistScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/playlistScreen.fxml
@@ -1,31 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.PlaylistController">
    <children>
-      <Label layoutX="35.0" layoutY="42.0" prefHeight="52.0" prefWidth="142.0" text="PlayLists">
+      <ListView fx:id="nameListView" layoutX="341.0" layoutY="38.0" prefHeight="435.0" prefWidth="323.0" />
+      <Button fx:id="uploadButton" layoutX="70.0" layoutY="198.0" mnemonicParsing="false" onAction="#uploadButtonClicked" prefHeight="52.0" prefWidth="155.0" text="Upload a file">
          <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <ListView fx:id="playListView" layoutX="22.0" layoutY="93.0" prefHeight="389.0" prefWidth="167.0" />
-      <HBox alignment="CENTER" layoutX="239.0" layoutY="396.0" prefHeight="73.0" prefWidth="433.0">
-         <children>
-            <Button fx:id="previousButton" mnemonicParsing="false" onAction="#previousButtonClicked" text="Previous" />
-            <Button fx:id="playButton" mnemonicParsing="false" onAction="#playButtonClicked" text="Play" />
-            <Button fx:id="nextButton" mnemonicParsing="false" onAction="#nextButtonClicked" text="Next" />
-         </children>
-      </HBox>
-      <ProgressBar fx:id="progressBar" layoutX="250.0" layoutY="376.0" prefHeight="20.0" prefWidth="401.0" progress="0.0" />
-      <ListView fx:id="nameListView" layoutX="216.0" layoutY="80.0" prefHeight="281.0" prefWidth="448.0" />
-      <Button fx:id="uploadButton" layoutX="554.0" layoutY="54.0" mnemonicParsing="false" onAction="#uploadButtonClicked" text="Upload Playlist" />
-      <Button fx:id="backButton" layoutX="35.0" layoutY="15.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
+            <Font size="18.0" />
+         </font></Button>
+      <Button fx:id="backButton" layoutX="33.0" layoutY="25.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
+      <Button fx:id="continueButton" layoutX="118.0" layoutY="384.0" mnemonicParsing="false" onAction="#continueButtonClicked" text="Continue" />
    </children>
 </AnchorPane>
