--- a/AnotherDuplicatelol/src/namesayer/playlistScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/playlistScreen.fxml
@@ -1,18 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.PlaylistController">
    <children>
-      <ListView fx:id="nameListView" layoutX="341.0" layoutY="38.0" prefHeight="435.0" prefWidth="323.0" />
-      <Button fx:id="uploadButton" layoutX="70.0" layoutY="198.0" mnemonicParsing="false" onAction="#uploadButtonClicked" prefHeight="52.0" prefWidth="155.0" text="Upload a file">
+      <VBox alignment="TOP_CENTER" layoutX="47.0" layoutY="137.0" prefHeight="207.0" prefWidth="348.0">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="44.0" prefWidth="329.0" text="Upload File">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
+            <Label text="Choose a file with names you want to practice" />
+            <Label prefHeight="18.0" prefWidth="329.0" text="Select file:">
+               <VBox.margin>
+                  <Insets bottom="5.0" top="30.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <HBox prefHeight="46.0" prefWidth="334.0">
+               <children>
+                  <TextField fx:id="fileText" prefHeight="32.0" prefWidth="233.0" promptText="No File Chosen">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Button fx:id="browseButton" mnemonicParsing="false" onAction="#browseButtonClicked" prefHeight="26.0" prefWidth="84.0" text="Browse">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+            <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadButtonClicked" text="Upload">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" layoutX="409.0" prefHeight="500.0" prefWidth="257.0" spacing="10.0">
+         <children>
+            <Label prefHeight="23.0" prefWidth="246.0" text="Names in File:">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <ListView fx:id="nameListView" prefHeight="351.0" prefWidth="251.0">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin>
+            </ListView>
+            <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueButtonClicked" prefHeight="28.0" prefWidth="91.0" text="Continue">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+      </VBox>
+      <Button fx:id="backButton" layoutX="52.0" layoutY="38.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back">
          <font>
-            <Font size="18.0" />
-         </font></Button>
-      <Button fx:id="backButton" layoutX="33.0" layoutY="25.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
-      <Button fx:id="continueButton" layoutX="118.0" layoutY="384.0" mnemonicParsing="false" onAction="#continueButtonClicked" text="Continue" />
+            <Font size="16.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
