--- a/AnotherDuplicatelol/src/namesayer/workSpaceCreator.fxml
+++ b/AnotherDuplicatelol/src/namesayer/workSpaceCreator.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -17,26 +12,22 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceCreatorController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceCreatorController">
    <opaqueInsets>
       <Insets />
    </opaqueInsets>
    <left>
-      <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="190.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER_LEFT" prefHeight="426.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <children>
-            <Pane prefHeight="70.0" prefWidth="200.0">
-               <children>
-                  <Label layoutX="1.0" layoutY="25.0" text="Select the recordings you want to practice">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-               </children>
+            <Label alignment="CENTER" text="Database names">
+               <font>
+                  <Font size="16.0" />
+               </font>
                <VBox.margin>
-                  <Insets left="20.0" />
+                  <Insets bottom="5.0" left="20.0" top="10.0" />
                </VBox.margin>
-            </Pane>
-            <ListView fx:id="databaseRecordingsView" prefHeight="350.0" prefWidth="170.0">
+            </Label>
+            <ListView fx:id="databaseRecordingsView" prefHeight="327.0" prefWidth="150.0">
                <VBox.margin>
                   <Insets left="20.0" />
                </VBox.margin>
@@ -62,23 +53,19 @@
       </VBox>
    </left>
    <right>
-      <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER_LEFT" prefHeight="425.0" prefWidth="198.0" BorderPane.alignment="CENTER">
          <children>
-            <Pane prefHeight="70.0" prefWidth="200.0">
+            <Label text="Currently Selected">
+               <font>
+                  <Font size="16.0" />
+               </font>
                <VBox.margin>
-                  <Insets right="20.0" />
+                  <Insets />
                </VBox.margin>
-               <children>
-                  <Label layoutX="77.0" layoutY="25.0" text="Current Workspace">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
-            <ListView fx:id="workspaceRecordingsView" prefHeight="350.0" prefWidth="200.0">
+            </Label>
+            <ListView fx:id="workspaceRecordingsView" prefHeight="335.0" prefWidth="178.0">
                <VBox.margin>
-                  <Insets right="20.0" />
+                  <Insets right="20.0" top="5.0" />
                </VBox.margin>
             </ListView>
             <HBox prefHeight="75.0" prefWidth="200.0">
@@ -92,10 +79,10 @@
                      <children>
                         <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueToPractice" text="Continue">
                            <VBox.margin>
-                              <Insets top="10.0" />
+                              <Insets />
                            </VBox.margin>
                         </Button>
-                        <CheckBox fx:id="randomiseBox" mnemonicParsing="false" prefHeight="20.0" prefWidth="150.0" text="Randomise Queue" />
+                        <CheckBox fx:id="randomiseBox" mnemonicParsing="false" prefHeight="20.0" prefWidth="150.0" text="Randomise" />
                      </children>
                      <HBox.margin>
                         <Insets left="30.0" />
@@ -110,26 +97,44 @@
       </VBox>
    </right>
    <center>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="220.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="437.0" prefWidth="303.0" BorderPane.alignment="CENTER">
          <children>
+            <Label alignment="TOP_LEFT" prefHeight="20.0" prefWidth="314.0" text="Search for names">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="15.0" right="15.0" />
+               </VBox.margin>
+            </Label>
             <HBox prefHeight="25.0" prefWidth="200.0">
                <children>
-                  <TextField fx:id="searchField" prefHeight="25.0" prefWidth="126.0" />
+                  <TextField fx:id="searchField" prefHeight="27.0" prefWidth="278.0" promptText="Type a name..." />
                   <Button fx:id="addSearchButton" mnemonicParsing="false" onAction="#addSearchedItem" text="Add" />
                </children>
                <VBox.margin>
-                  <Insets left="20.0" />
+                  <Insets left="15.0" right="15.0" />
                </VBox.margin>
             </HBox>
-            <ListView fx:id="searchList" prefHeight="325.0" prefWidth="170.0">
+            <ListView fx:id="searchList" prefHeight="297.0" prefWidth="298.0">
                <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
+                  <Insets left="15.0" right="15.0" />
                </VBox.margin>
             </ListView>
          </children>
          <BorderPane.margin>
-            <Insets top="73.0" />
+            <Insets top="10.0" />
          </BorderPane.margin>
       </VBox>
    </center>
+   <top>
+      <Label prefHeight="44.0" prefWidth="664.0" text="Select Names" BorderPane.alignment="CENTER">
+         <font>
+            <Font name="System Bold" size="36.0" />
+         </font>
+         <BorderPane.margin>
+            <Insets bottom="7.0" top="20.0" />
+         </BorderPane.margin>
+      </Label>
+   </top>
 </BorderPane>
