--- a/AnotherDuplicatelol/src/namesayer/playlistScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/playlistScreen.fxml
@@ -3,8 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -12,72 +10,66 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.PlaylistController">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="47.0" layoutY="137.0" prefHeight="207.0" prefWidth="348.0">
-         <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="44.0" prefWidth="329.0" text="Upload File">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Label>
-            <Label text="Choose a file with names you want to practice" />
-            <Label prefHeight="18.0" prefWidth="329.0" text="Select file:">
-               <VBox.margin>
-                  <Insets bottom="5.0" top="30.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <HBox prefHeight="46.0" prefWidth="334.0">
-               <children>
-                  <TextField fx:id="fileText" prefHeight="32.0" prefWidth="233.0" promptText="No File Chosen">
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
-                  </TextField>
-                  <Button fx:id="browseButton" mnemonicParsing="false" onAction="#browseButtonClicked" prefHeight="26.0" prefWidth="84.0" text="Browse">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Button>
-               </children>
-            </HBox>
-            <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadButtonClicked" text="Upload">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-      </VBox>
-      <VBox alignment="CENTER" layoutX="409.0" prefHeight="500.0" prefWidth="257.0" spacing="10.0">
-         <children>
-            <Label prefHeight="23.0" prefWidth="246.0" text="Names in File:">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <ListView fx:id="nameListView" prefHeight="351.0" prefWidth="251.0">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
-            </ListView>
-            <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueButtonClicked" prefHeight="28.0" prefWidth="91.0" text="Continue">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="5.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-      </VBox>
-      <Button fx:id="backButton" layoutX="52.0" layoutY="38.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back">
+      <Button fx:id="practiceButton" layoutX="442.0" layoutY="62.0" mnemonicParsing="false" onAction="#practiceButtonClicked" prefHeight="46.0" prefWidth="90.0" text="Practice">
          <font>
-            <Font size="16.0" />
+            <Font size="14.0" />
          </font>
       </Button>
+      <Button fx:id="uploadButton" layoutX="540.0" layoutY="62.0" mnemonicParsing="false" onAction="#uploadButtonClicked" prefHeight="46.0" prefWidth="90.0" text="Upload">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Label layoutX="48.0" layoutY="62.0" prefHeight="81.0" prefWidth="264.0" text="Playlist">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <HBox layoutX="48.0" layoutY="188.0" prefHeight="279.0" prefWidth="594.0">
+         <children>
+            <VBox prefHeight="251.0" prefWidth="185.0">
+               <children>
+                  <Button fx:id="playlist1" mnemonicParsing="false" prefHeight="125.0" prefWidth="185.0">
+                     <VBox.margin>
+                        <Insets bottom="15.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="playlist4" mnemonicParsing="false" prefHeight="125.0" prefWidth="185.0" />
+               </children>
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
+            </VBox>
+            <VBox prefHeight="227.0" prefWidth="185.0">
+               <children>
+                  <Button fx:id="playlist2" mnemonicParsing="false" prefHeight="125.0" prefWidth="185.0">
+                     <VBox.margin>
+                        <Insets bottom="15.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="playlist5" mnemonicParsing="false" prefHeight="125.0" prefWidth="185.0" />
+               </children>
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
+            </VBox>
+            <VBox prefHeight="227.0" prefWidth="185.0">
+               <children>
+                  <Button fx:id="playlist3" mnemonicParsing="false" prefHeight="125.0" prefWidth="185.0">
+                     <VBox.margin>
+                        <Insets bottom="15.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="playlist6" mnemonicParsing="false" prefHeight="125.0" prefWidth="185.0" />
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+      <Label layoutX="48.0" layoutY="140.0" prefHeight="28.0" prefWidth="314.0" text="Here are your current playlists:">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button fx:id="backButton" layoutX="48.0" layoutY="29.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
    </children>
 </AnchorPane>
