--- a/AnotherDuplicatelol/src/namesayer/startMenu.fxml
+++ b/AnotherDuplicatelol/src/namesayer/startMenu.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
@@ -8,25 +7,15 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.StartMenuController">
-   <top>
-      <Label text="Name Sayer" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets top="50.0" />
-         </BorderPane.margin>
-         <font>
-            <Font size="96.0" />
-         </font>
-      </Label>
-   </top>
    <center>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="practiceButton" mnemonicParsing="false" onAction="#beginPractice" prefWidth="200.0" text="New Practice">
+            <Label text="Name Sayer">
                <font>
-                  <Font size="20.0" />
+                  <Font size="96.0" />
                </font>
-            </Button>
-            <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadButtonClicked" prefWidth="200.0" text="Upload File">
+            </Label>
+            <Button fx:id="practiceButton" mnemonicParsing="false" onAction="#beginPractice" prefWidth="200.0" text="Practice">
                <font>
                   <Font size="20.0" />
                </font>
