--- a/AnotherDuplicatelol/src/namesayer/rateScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/rateScreen.fxml
@@ -1,33 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="250.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.RateScreenController">
    <children>
-      <VBox alignment="CENTER" layoutX="24.0" layoutY="-29.0" prefHeight="250.0" prefWidth="350.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="TOP_CENTER" prefHeight="300.0" prefWidth="400.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label text="Rate This Recording">
                <font>
                   <Font size="18.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="25.0" />
+               </VBox.margin>
             </Label>
             <Label text="What would you rate the quality of this recording?" />
-            <HBox alignment="CENTER" prefHeight="55.0" prefWidth="350.0" spacing="10.0">
-               <children>
-                  <CheckBox fx:id="check1" mnemonicParsing="false" onAction="#check1Clicked" />
-                  <CheckBox fx:id="check2" mnemonicParsing="false" onAction="#check2Clicked" />
-                  <CheckBox fx:id="check3" mnemonicParsing="false" onAction="#check3Clicked" />
-                  <CheckBox fx:id="check4" mnemonicParsing="false" onAction="#check4Clicked" />
-                  <CheckBox fx:id="check5" mnemonicParsing="false" onAction="#check5Clicked" />
-               </children>
-            </HBox>
-            <Button fx:id="confirmButton" mnemonicParsing="false" onAction="#confirmButtonClicked" text="Confirm" />
+            <Label fx:id="rateText">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </Label>
+            <Slider fx:id="rateSlider" blockIncrement="1.0" majorTickUnit="4.0" max="5.0" min="1.0" prefHeight="40.0" prefWidth="300.0" showTickLabels="true" showTickMarks="true" snapToTicks="true">
+               <VBox.margin>
+                  <Insets left="25.0" right="25.0" />
+               </VBox.margin>
+            </Slider>
+            <Button fx:id="confirmButton" mnemonicParsing="false" onAction="#confirmButtonClicked" text="Confirm">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin></Button>
          </children>
       </VBox>
    </children>
