--- a/AnotherDuplicatelol/src/namesayer/uploadScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/uploadScreen.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.UploadController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.UploadController">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="47.0" layoutY="137.0" prefHeight="207.0" prefWidth="348.0">
          <children>
@@ -64,7 +69,7 @@
                   <Insets left="10.0" right="10.0" />
                </VBox.margin>
             </ListView>
-            <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueButtonClicked" prefHeight="28.0" prefWidth="91.0" text="Continue">
+            <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueButtonClicked" prefHeight="32.0" prefWidth="111.0" text="Continue">
                <font>
                   <Font size="16.0" />
                </font>
