--- a/AnotherDuplicatelol/src/namesayer/workspace.fxml
+++ b/AnotherDuplicatelol/src/namesayer/workspace.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -22,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceController">
    <children>
       <Pane layoutX="-6.0" prefHeight="500.0" prefWidth="700.0">
          <children>
@@ -76,7 +70,7 @@
             </VBox>
             <VBox layoutX="34.0" layoutY="21.0" prefHeight="464.0" prefWidth="250.0" spacing="5.0">
                <children>
-                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" text=" Edit playlist">
+                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" text=" Edit play queue">
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin>
@@ -111,6 +105,8 @@
                   </HBox>
                </children>
             </VBox>
+            <Button fx:id="loopButton" layoutX="599.0" layoutY="31.0" mnemonicParsing="false" text="Loop" />
+            <Button fx:id="saveButton" layoutX="545.0" layoutY="31.0" mnemonicParsing="false" text="Save" />
          </children>
       </Pane>
    </children>
